--- a/Calculator/Calci.html
+++ b/Calculator/Calci.html
@@ -118,7 +118,7 @@
 	 function solve()
 	 {
 	  var x = document.getElementById('result').value
-	  var prev = eval(x)
+	  prev = eval(x)
 	  document.getElementById('result').value=eval(x)
 	 }
 	 
