--- a/POLO FARC Template/inspirothemes.com/polo/header.html
+++ b/POLO FARC Template/inspirothemes.com/polo/header.html
@@ -5,9 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" /> <meta name="author" content="INSPIRO" />
 <meta name="description" content="Themeforest Template Polo">
-<link rel="icon" type="image/png" href="images/favicon.png">
+<link rel="icon" type="image/png" href="images/FARC/Logo.png">
 
-<title>POLO | The Multi-Purpose HTML5 Template</title>
+<title>FARC</title>
 
 <link href="css/plugins.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -21,8 +21,8 @@
 
 <div id="logo">
 <a href="index.html">
-<img src="images/logo.png" class="logo-default">
-<img src="images/logo-dark.png" class="logo-dark">
+<img src="images/FARC/logo.png" class="logo-default">
+<img src="images/FARC/logo.png" class="logo-dark">
 </a>
 </div>
 
